--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: crystal
 
-# Uncomment the following if you'd like Travis to run specs and check code formatting
-# script:
-#   - crystal spec
-#   - crystal tool format --check
+before_install: make build
+
+install:
+  - shards install
+
+script:
+  - bin/ameba
+
+sudo: required
+email: false
